--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,6 @@
 }
 
 body {
-    background: linear-gradient(45deg, #bc7bc0 0%, #4c5dc0 100%);
+    background: linear-gradient(45deg, #F7F7F7 0%, #ececec 100%);
     height: 100vh;
 }
